--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label fw-bold">Credit card number</label>
-                        <input type="text" class="form-control" placeholder="(16-digit-number)" formControlName="creditCard">
+                        <input type="number" class="form-control" placeholder="(16-digit-number)" formControlName="creditCard">
                     </div>
                     <button class="btn btn-primary" [disabled]="checkoutForm.invalid" >Submit</button>
                 </form>
