--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -15,3 +15,5 @@
         </div>
     </div>
 </section>
+
+<app-product-item-detail class="d-none" (addToCartMessage)="addToCartMessagePerant()"></app-product-item-detail>
