--- a/src/app/components/confirmation/confirmation.component.html
+++ b/src/app/components/confirmation/confirmation.component.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="text-center">
             <h3 class="text-success"> Success!</h3>
-            <p>Thank you , <span class="fw-bold">{{userInfo?.fullName}}</span> </p>
-            <p>Your <span class="fw-bold">${{userInfo?.total}}</span>  order is confirmed!</p>
+            <p>Thank you , <span class="fw-bold">{{userName}}</span> </p>
+            <p>Your <span class="fw-bold">${{total}}</span>  order is confirmed!</p>
             <p>please allow 1-3 business day(s) for shipping</p>
             <button class="btn btn-primary" routerLink="/product">Back to product list</button>
         </div>
